vlib/v/checker/tests/for_comptime_struct_values_err.out
vlib/v/checker/tests/for_comptime_struct_values_err.vv:5:11: error: comptime value lookup supports only enum, and Foo isn't
    3 | fn (_ Foo) hello() {}
    4 | 
    5 | $for i in Foo.values {
      |           ~~~
    6 |     println(i)
    7 | }
