vlib/v/checker/tests/for_comptime_struct_values_err.vv
struct Foo{}

fn (_ Foo) hello() {}

$for i in Foo.values {
	println(i)
}
